--- a/golang/rollup/example/Makefile
+++ b/golang/rollup/example/Makefile
@@ -3,17 +3,16 @@
 #
 
 NAME=dapp
+
 CC=riscv64-linux-gnu-gcc-12
 CARTESI_MACHINE=/home/renan/.local/outuni/bin/cartesi-machine
 # CARTESI_MACHINE=cartesi-machine
 
-all: clean go pack snapshot
+all: clean snapshot
 
-go:
+snapshot:
 	CC=$(CC) CGO_ENABLED=1 GOOS=linux GOARCH=riscv64 go build -o ./$(NAME)/$(NAME)
 	chmod +x ./$(NAME)/$(NAME)
-
-pack:
 	tar \
 		--sort=name \
 		--mtime="2022-01-01" \
@@ -27,8 +26,6 @@ pack:
 		-b 16384 \
 		-a $(NAME).tar \
 		$(NAME).ext2
-
-snapshot:
 	$(CARTESI_MACHINE) \
 		--flash-drive=label:$(NAME),filename:$(NAME).ext2 \
 	    --assert-rolling-template \
@@ -39,3 +36,4 @@ clean:
 	rm -rf ./snapshot
 	rm -rf ./$(NAME)
 	rm -f $(NAME).*
+
